feat(lettering): support free text offsets
